Update script name in GitHub Actions workflow

--- a/hent_snedybder.yml
+++ b/hent_snedybder.yml
@@ -25,7 +25,7 @@ jobs:
         pip install requests beautifulsoup4
 
     - name: Run scraping script
-      run: python scrape_snow.py
+      run: python hent_snedybder.py
 
     - name: Commit and Push changes
       run: |
